projects/vb6parse/snapshots/syntax/statements/system_interaction/beep/beep_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/beep.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: BeepStatement
      children:
        - kind: BeepKeyword
          text: Beep
    - kind: Newline
      text: "\n"
