projects/vb6parse/snapshots/syntax/statements/system_interaction/beep/beep_in_loop.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/beep.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ForStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: i
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Whitespace
                  text: " "
                - kind: ToKeyword
                  text: To
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "3"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: BeepStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: BeepKeyword
                          text: Beep
                    - kind: Newline
                      text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
