projects/vb6parse/snapshots/syntax/statements/system_interaction/beep/beep_with_comment.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/beep.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: BeepStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: BeepKeyword
                  text: Beep
                - kind: Whitespace
                  text: " "
            - kind: EndOfLineComment
              text: "' Alert user"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
